--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <label>use_mmap <input type="checkbox" id="use_mmap" checked></label>
                     <label>use_mlock <input type="checkbox" id="use_mlock"></label>
                     <label>num_thread <input type="number" id="num_thread" min="0" value="0" title="0 表示自动"></label>
+                    <label>think <input type="checkbox" id="think"></label>
                 </div>
             </div>
             <div class="panel-section">
